style: fix input overflow

--- a/apps/client/src/common/components/input/time-input/TimeInputWithButton.module.scss
+++ b/apps/client/src/common/components/input/time-input/TimeInputWithButton.module.scss
@@ -8,5 +8,5 @@ $input-delayed-border-color: $ontime-delay-text;
 }
 
 .inputField {
-  max-width: 7.75em;
+  text-align: left;
 }
